k8s/overlays/dev/frontend/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: YOUR_REGISTRY/search-web:dev
