k8s/overlays/dev/frontend/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
spec:
  rules:
    - host: dev.YOUR_DOMAIN
